--- a/src/app/global_comman/selectavatar/selectavatar.component.css
+++ b/src/app/global_comman/selectavatar/selectavatar.component.css
@@ -4,18 +4,6 @@
     opacity: 0.5;
   }
 
-  /* :host ::ng-deep .background {
-    background-color: rgb(248, 216, 192);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: start;
-  } */
-
   :host ::ng-deep .background {
     background-image: url('/assets/background-img/background02.png');
     background-size: cover;
@@ -76,7 +64,8 @@ background-color: white; /* Equivalent to Bootstrap's bg-white class */
 /* margin-bottom: 0.25rem; /* Equivalent to Bootstrap's mb-1 class */
 }
 
-.avatar-selection-box .btn-submit {
+.avatar-selection-box .btn-submit,
+.avatar-selection-box .btn-skip{
   display: block; /* Make the button a block-level element */
   width: 100%;
   margin: 0 auto;
@@ -86,11 +75,19 @@ background-color: white; /* Equivalent to Bootstrap's bg-white class */
   border: none;
   border-radius: 10px;
   cursor: pointer;
-  font-size: 1.5rem; /* Font size for buttons */
+  font-size: 1.2rem; /* Font size for buttons */
   text-align: center;
   transition: background-color 0.3s; /* Smooth transition for hover effect */
   font-family: 'MedievalSharp', sans-serif; 
   justify-content: center;
+}
+
+.avatar-selection-box .btn-skip {
+  background-color: #bdb9b6; /* Dark button color */
+}
+
+.avatar-selection-box .btn-skip:hover {
+  background-color: #d7d3cf; /* Dark button color */
 }
 
 h2 {
