--- a/src/app/global_comman/selectavatar/selectavatar.component.html
+++ b/src/app/global_comman/selectavatar/selectavatar.component.html
@@ -13,6 +13,10 @@
             <div class="col-xl-3 col-lg-3 justify-content-center" style ="padding: 1em;">
                     <button (click)="submit()"  class="btn-submit">Complete</button>      
             </div>
+
+            <div class="col-xl-3 col-lg-3 justify-content-center" style="padding: 1em;">
+                <button (click)="skipAvatar()" class="btn-skip">Skip</button>
+              </div>
     </div> 
 </div>
 
