--- a/src/app/module1_exam_prep/game1_questions/view-questions/view-questions.component.css
+++ b/src/app/module1_exam_prep/game1_questions/view-questions/view-questions.component.css
@@ -1,4 +1,3 @@
-/* Container styling */
 :host ::ng-deep .background {
     background-image: linear-gradient(
       rgba(255, 255, 255, 0.3), /* Semi-transparent white */
@@ -26,7 +25,6 @@
     align-items: center;
 }
 
-
 /* Title styling */
 .game-title {
     font-size: 2.5em;
@@ -50,45 +48,16 @@
     transition: background-color 0.3s;
 }
 
-/* Container for buttons */
-.button-container {
-    display: flex;
-    justify-content: flex-end; /* Align buttons to the right */
-    gap: 10px; /* Optional: space between the buttons */
-    margin-top: 10px;
-  }
-  
-  /* Buttons styles */
-  .save-btn, .cancel-btn, .delete-btn{
-    background-color: #c27d2a; 
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 8px 15px;
-    cursor: pointer;
-  }
-
-.save-btn:hover,
-.cancel-btn:hover, 
-.delete-btn:hover{
-  opacity: 0.8;
-}
-
-.add-button:hover {
-    background-color: #d2a269;
-}
-
 /* Mind map grid layout */
-.mind-map-grid {
+.question-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Four cards per row */
+    grid-template-columns: repeat(3, 1fr); /* Four cards per row */
     grid-gap: 20px; /* Space between cards */
     /* width: 100%; */
     margin-top: 10px;
 }
-
 /* Mind map card styling */
-.mind-map-card {
+.question-card {
     background-color: #ffffff;
     border: 1px solid #e0e0e0;
     border-radius: 8px;
@@ -98,61 +67,25 @@
     flex-direction: column;
     justify-content: centre;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    width: 220px;
-    min-height: 280px; /* Min height for smaller screens */
+    width: 300px;
+    max-height: 120px; /* Min height for smaller screens */
     cursor: pointer;
     justify-content: flex-start; /* Ensure items stay at the top */
     text-align: center;
 }
 
-.mind-map-card:hover {
+.question-card:hover {
     transform: scale(1.02);
 }
 
-
-
-/* Mind map image styling */
-.mind-map-image {
+.question-image {
     height: 130px;
     object-fit: contain; /* Ensures the image covers the area while maintaining its aspect ratio */
     border-radius: 4px;
     margin-top: 10px;
     margin-bottom: 10px;
     border: 1px solid #ecebea;
-
 }
-.mind-map-card h4{
-margin: auto;
-}
-/* Base style for the status tag */
-.status-tag {
-    text-align: center;
-    width: 50%;
-    border-radius: 5px;
-    color: white;
-    font-size: 0.8em;
-    font-weight: bold;
-    align-self: center;
-}
-  
-  /* Status colors */
-  .status-started {
-    background-color: #607cf1;
-  }
-  
-  .status-in-progress {
-    background-color: #e2bf33; 
-  }
-  
-  .status-completed {
-    background-color: #45c442; 
-  }
-  
-  /* Optional default class in case the status is missing or invalid */
-  .status-default {
-    background-color: #cccccc; /* Gray as a fallback */
-  }
-  
 
 /* Container for the preview image in the modal */
 .image-preview {
@@ -197,6 +130,8 @@ margin: auto;
   .camera-icon i {
     pointer-events: none; /* Prevent icon from intercepting click events */
   }
+
+
 /* Modal styling */
 .modal {
     position: fixed;
@@ -231,12 +166,6 @@ margin: auto;
     background-image: url('/assets/background-img/brick_background.jpg'); 
   }
 
-  .modal-actions {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-  }
-
 /* Close button styling */
 .close {
     top: 10px;
@@ -249,6 +178,34 @@ margin: auto;
 
 .close:hover {
     color: #000;
+}
+
+/* Container for buttons */
+.button-container {
+    display: flex;
+    justify-content: flex-end; /* Align buttons to the right */
+    gap: 10px; /* Optional: space between the buttons */
+    margin-top: 10px;
+  }
+  
+  /* Buttons styles */
+  .save-btn, .cancel-btn, .delete-btn{
+    background-color: #c27d2a; 
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 15px;
+    cursor: pointer;
+  }
+
+.save-btn:hover,
+.cancel-btn:hover, 
+.delete-btn:hover{
+  opacity: 0.8;
+}
+
+.add-button:hover {
+    background-color: #d2a269;
 }
 
 /* Form styling */
@@ -292,6 +249,7 @@ button[type="submit"] {
 button[type="submit"]:hover {
     opacity: 0.8;
 }
+  
 
 /* Responsive Styles */
 @media (max-width: 1200px) {
@@ -314,10 +272,9 @@ button[type="submit"]:hover {
         padding: 8px 15px;
     }
 
-    .mind-map-card {
+    .question-card {
         padding: 10px;
-        width: 180px; /* Reduce card width on smaller screens */
-        min-height: 280px;
+        min-height: 100px;
     }
 
     .modal-background{
@@ -328,7 +285,7 @@ button[type="submit"]:hover {
     }
 }
 @media (max-width: 900px) {
-    .mind-map-grid {
+    .question-grid {
         grid-template-columns: repeat(2, 1fr); /* Two cards per row */
     }
     .camera-icon{
@@ -336,15 +293,12 @@ button[type="submit"]:hover {
     }
 }
 @media (max-width: 600px) {
-    .mind-map-grid {
+    .question-grid {
         grid-template-columns: 1fr; /* One card per row */
         width: 90%;
     }
     .camera-icon{
         left: 80px;
-    }
-    .status-tag {
-        width: 40%;
     }
 }
 
@@ -358,20 +312,20 @@ button[type="submit"]:hover {
         padding: 7px 12px;
     }
 
-    .mind-map-card h4 {
+    .question h4 {
         font-size: 1.5em;
     }
 
-    .mind-map-card p {
+    .question p {
         font-size: 0.9em;
     }
 
     .modal-content {
         padding: 15px;
     }
-    .mind-map-card {
+    .question-card {
         width: 100%; /* Full width for very small screens */
-        min-height: 240px; /* Reduce height for smaller screens */
+        min-height: 90px; /* Reduce height for smaller screens */
     }
     .button-container {
         flex-direction: column;
