--- a/src/app/module1_exam_prep/game1_tutorials/view-tutorials/view-tutorials.component.css
+++ b/src/app/module1_exam_prep/game1_tutorials/view-tutorials/view-tutorials.component.css
@@ -51,11 +51,24 @@
       opacity: 1;
     }
   }
+  .no-tutorials{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.8;
+    background-color: #f8f8f8;
+    border-radius: 10px;
+    height: 70%;
+    width: 70%;
+    font-size: 1.5rem;
+    align-self: center;
+}
 
   .add-button {
     background-color: #a26b1f;
     color: white;
-    border-color: rgb(107, 83, 50);
+    /* border-color: rgb(107, 83, 50); */
     border-radius: 5px;
     padding: 10px 20px;
     cursor: pointer;
@@ -70,12 +83,12 @@
     gap: 20px;
     justify-content: flex-start; /* Align items to the left */
 }
-  
-  .record-card {
-    background-color: #fff;
-    border: 2px solid #c89f5f; /* Gold border */
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+  .record-card { 
+    background-color: #f5f5f5;
+    border: 1px solid #d6d4d4; 
+    border-radius: 8px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
     width: 300px;
     padding: 15px;
     text-align: center;
@@ -87,6 +100,8 @@
     cursor: pointer;
     transition: transform 0.3s ease;
   }
+
+  
   
   .record-card:hover {
     transform: translateY(-10px);
@@ -105,7 +120,7 @@
     object-fit: cover; /* Ensure image covers the area */
   }
   
-  .record-header h3 {
+  .record-header h4 {
     margin: 0;
   }
   
@@ -389,6 +404,37 @@
 .padlock-gif:not(.padlock-visible) {
   opacity: 0; /* Fully transparent */
 }
+
+/* Base style for the status tag */
+.status-tag {
+  text-align: center;
+  width: 50%;
+  border-radius: 5px;
+  color: white;
+  font-size: 0.8em;
+  font-weight: bold;
+  align-self: center;
+  margin: 10px 0;
+}
+
+/* Status colors */
+.status-started {
+  background-color: #607cf1;
+}
+
+.status-in-progress {
+  background-color: #e2bf33; 
+}
+
+.status-completed {
+  background-color: #45c442; 
+}
+
+/* Optional default class in case the status is missing or invalid */
+.status-default {
+  background-color: #cccccc; /* Gray as a fallback */
+}
+
 
 @media (max-width: 768px) {
   .sage-image-container {
