--- a/src/app/module1_exam_prep/game1_tutorials/tutorial-submission/tutorial-submission.component.html
+++ b/src/app/module1_exam_prep/game1_tutorials/tutorial-submission/tutorial-submission.component.html
@@ -1,128 +1,6 @@
-<!-- <div class="p1dv1 col-11">
-
-
-
-    <div class="register-form">
-        <form [formGroup]="form" (ngSubmit)="onSubmit()">
-
-            <div class="form-group">
-                <label>Tutorial Name</label>
-                <input
-                  type="text"
-                  formControlName="tuteName"
-                  class="form-control"
-                  [ngClass]="{ 'is-invalid': submitted && f['tuteName'].errors }"
-                />
-                <div *ngIf="submitted && f['tuteName'].errors" class="invalid-feedback">
-                  <div *ngIf="f['tuteName'].errors['required']">Tutorial Name is required</div>
-                  <div *ngIf="f['tuteName'].errors['minlength']">
-                    Username must be at least 6 characters
-                  </div>
-                  <div *ngIf="f['tuteName'].errors['maxlength']">
-                    Username must not exceed 20 characters
-                  </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-12 form-group" > -->
-
-                <!-- <label>Completion Date</label>
-                <input type="date"  id="dateDone"  (change)="onDateChange($event)"  formControlName="dateDone"   class="form-control" placeholder="eg : 1996-03-18"
-                    [ngClass]="{ 'is-invalid': submitted && f['dateDone'].errors }">
-                <div *ngIf="submitted && f['dateDone'].errors" class="invalid-feedback">
-                        <div *ngIf="f['dateDone'].errors['dateDone']">completion date is required</div>
-                </div> -->
-            <!-- </div>
-
-            <div class="row form-group mt-2">
-                <div class="col-md-6 col-12 form-group">
-                    <label for="dateDone">Completion Date</label>
-                    <input
-                      type="date"
-                      id="dateDone"
-                      formControlName="dateDone"
-                      class="form-control"
-                      placeholder="e.g., 1996-03-18"
-                      [ngClass]="{ 'is-invalid': submitted && f['dateDone'].errors }"
-                    />
-                    <div *ngIf="submitted && f['dateDone'].errors" class="invalid-feedback">
-                      <div *ngIf="f['dateDone'].errors['required']">Completion date is required</div>
-                    </div>
-                  </div> -->
-
-
-                <!--
-                <div class="col-md-6 col-12 form-group" >
-                    <label>Complete Percentage</label>
-                    <select id="compltePercentage" formControlName="compltePercentage" name="compltePercentage"
-                    [ngClass]="{ 'is-invalid': submitted && f['compltePercentage'].errors }"  >
-                        <option value=25>25%</option>
-                        <option value=50>50%</option>
-                        <option value=75>75%</option>
-                        <option value=100>100%</option>
-                    </select>
-                    <div *ngIf="submitted && f['compltePercentage'].errors" class="invalid-feedback">
-                        <div *ngIf="f['compltePercentage'].errors['compltePercentage']">complete percentage is required</div>
-                      </div>
-                </div> -->
-
-                <!-- <div class="col-md-6 col-12 form-group">
-                    <label>Complete Percentage</label>
-                    <select
-                      id="compltePercentage"
-                      formControlName="compltePercentage"
-                      [ngClass]="{ 'is-invalid': submitted && f['compltePercentage'].errors }"
-                    >
-                      <option value="25">25%</option>
-                      <option value="50">50%</option>
-                      <option value="75">75%</option>
-                      <option value="100">100%</option>
-                    </select>
-                    <div *ngIf="submitted && f['compltePercentage'].errors" class="invalid-feedback">
-                      <div *ngIf="f['compltePercentage'].errors['required']">Complete percentage is required</div>
-                    </div>
-                  </div>
-            </div>
-
-          <div class="form-group">
-            <label>Description</label>
-            <input
-              type="text"
-              formControlName="description"
-              class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f['description'].errors }"
-            />
-            <div *ngIf="submitted && f['description'].errors" class="invalid-feedback">
-              <div *ngIf="f['description'].errors['required']">Fullname is required</div>
-            </div>
-          </div>
-      
-
-      
-
-      
-
-      
-          <div class="form-group mt-2">
-            <button type="submit" class="btn btn-primary">Register</button>
-            <button
-              type="button" style="margin-left:20px;"
-              (click)="onReset()"
-              class="btn btn-warning float-right "
-            >
-              Reset
-            </button>
-          </div>
-        </form>
-      </div>
-
-
-</div> -->
-
-
-
 <!-- <div class="background"> -->
-  <div class="tutorial-box">
-      <h1>Log New Tutorial</h1>
+  <!-- <div class="tutorial-box">
+      <h2>Log New Tutorial</h2>
       <form [formGroup]="tutorialForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
               <label for="tutorialName">Tutorial Name:</label>
@@ -155,6 +33,7 @@
           <div class="form-group input-group">
             <label for="progress">Progress</label>
             <select
+              id = "progress"
               formControlName="progress"
               class="form-control"
               [ngClass]="{ 'is-invalid': submitted && f['progress'].errors }"
@@ -185,5 +64,5 @@
               <button type="submit" class="btn-submit">Submit</button>
           </div>
       </form>
-  </div>
+  </div> -->
 <!-- </div> -->
