--- a/src/app/global_comman/header/header.component.html
+++ b/src/app/global_comman/header/header.component.html
@@ -35,7 +35,8 @@
                       <li> <a class="dropdown-item" routerLink="/home"><i class="fas fa-home icon-home" style="color: #070707;"></i>  Home</a></li>
                       <li><a class="dropdown-item" routerLink="/profile"><i class="fas fa-user-circle"></i>  Profile</a></li>
                       <li><a class="dropdown-item"routerLink="/share"><i class="fas fa-users" style="color: #070707;"></i>  Share</a></li>
-                      <li><a class="dropdown-item" href="#"><i class="fas fa-question-circle" style="color: #070707;"></i>  Help</a></li>
+                      <li><a class="dropdown-item"routerLink="/upload"><i class="fas fa-users" style="color: #070707;"></i>  Upload</a></li>
+                      <li><a class="dropdown-item" href="/hometest"><i class="fas fa-question-circle" style="color: #070707;"></i>  Help</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" (click)="logout()"><i class="fas fa-power-off" style="color: #070707;"></i>  Logout</a></li>
                   </ul>
