text editor related changes commited

--- a/src/app/module1_exam_prep/game1_mindmaps/mindmap-submission/test-upload/test-upload.component.html
+++ b/src/app/module1_exam_prep/game1_mindmaps/mindmap-submission/test-upload/test-upload.component.html
@@ -1,3 +1,11 @@
+<h2>Angular Kolkov Text Editor</h2>
+<angular-editor [(ngModel)]="editorContent" [config]="editorConfig"></angular-editor>
+<button type="button" class="btn btn-success" (click)="submitAnswer()">Answer Submit</button>
+<div>
+  <h3>Preview</h3>
+  <div [innerHTML]="editorContent"></div>
+</div>
+
 
 <DIV class="row">
 <diV class="form-container col-6" >
