--- a/src/app/global_comman/profile/profile.component.html
+++ b/src/app/global_comman/profile/profile.component.html
@@ -203,11 +203,11 @@
         <a class="nav-link active" id="progress-tab" data-bs-toggle="tab" href="#progress" role="tab">My Progress</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="badges-tab" data-bs-toggle="tab" href="#badges" role="tab">My Badges</a>
+        <a class="nav-link" id="badges-tab" data-bs-toggle="tab" href="#badges" role="tab">My Achievements</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" id="other-tab" data-bs-toggle="tab" href="#other" role="tab">Shared</a>
-      </li>
+      </li> -->
     </ul>
     
     <div class="tab-content" id="profileTabContent">
@@ -251,7 +251,23 @@
               <img src="assets/hieroglyph3.png" alt="Game 3 Icon" class="game-icon">
               <div class="game-info">
                 <h4>Sword of Anubis</h4>
-                <p>Completed: 10 activities</p>
+                <p>Completed: 10 questions</p>
+              </div>
+            </div>
+
+            <div class="game-box">
+              <img src="assets/hieroglyph2.png" alt="Game 2 Icon" class="game-icon">
+              <div class="game-info">
+                <h4>Sekhmats Map</h4>
+                <p>Completed: 8 Mind Maps</p>
+              </div>
+            </div>
+
+            <div class="game-box">
+              <img src="assets/hieroglyph2.png" alt="Game 2 Icon" class="game-icon">
+              <div class="game-info">
+                <h4>Sekhmats Map</h4>
+                <p>Completed: 8 Mind Maps</p>
               </div>
             </div>
           </div>
@@ -268,10 +284,10 @@
       </div>
 
       <!-- Other Tab Content -->
-      <div class="tab-pane fade" id="other" role="tabpanel">
+      <!-- <div class="tab-pane fade" id="other" role="tabpanel">
         <h3>Other Tab</h3>
         <p>Content for another tab goes here.</p>
-      </div>
+      </div> -->
     </div>
   </div>
 
